https://savannah.nongnu.org/bugs/?25239

patch #6709: Report correct number of volumes when restoring
https://savannah.nongnu.org/patch/?6709

sr #106583: document the need to use the --force option
https://savannah.nongnu.org/support/?106583

bug #25230: --include-globbing-filelist only including first entry.
https://savannah.nongnu.org/bugs/?25230


New in v0.5.05 (2008/12/30)
---------------------------
bug #25194: Duplicity 5.04 requires python-distutils-extra...
https://savannah.nongnu.org/bugs/?25194


New in v0.5.04 (2008/12/27)
---------------------------
patch #6678: Add progress metering
https://savannah.nongnu.org/patch/?6678

patch #6686: Add error codes for all fatal errors
https://savannah.nongnu.org/patch/?6686

bug #25090: Typos and trailing whitespace in duplicity manpage
https://savannah.nongnu.org/bugs/?25090

bug #24889: NCFTP cannot deal with some FTP servers
https://savannah.nongnu.org/bugs/?24889

patch #6692: Print collection status in a machine-readable way
https://savannah.nongnu.org/patch/?6692

patch #6693: Some FatalError's don't have codes still
https://savannah.nongnu.org/patch/?6693

patch #6694: Log exceptions
https://savannah.nongnu.org/patch/?6694

patch #6695: Log filenames
https://savannah.nongnu.org/patch/?6695

patch #6696: Consolidate get_delta_iter and get_delta_iter_w_sig
https://savannah.nongnu.org/patch/?6696

patch #6697: Always log at least one progress during dry run
https://savannah.nongnu.org/patch/?6697

patch #6700: Make duplicity translatable
https://savannah.nongnu.org/patch/?6700

patch #6701: Make current-list command machine-readable
https://savannah.nongnu.org/patch/?6701

patch #6702: handle unknown errnos in robust.py
https://savannah.nongnu.org/patch/?6702

GPG was throwing "gpg: [don't know]: invalid packet (ctb=14)" and apparently
this is non-fatal.  There is a fix for this being rolled into GPG 2.x.
http://lists.gnupg.org/pipermail/gnupg-devel/2006-September/023180.html