@@ -12,6 +12,9 @@ https://savannah.nongnu.org/support/?106583
 bug #25230: --include-globbing-filelist only including first entry.
 https://savannah.nongnu.org/bugs/?25230
 
+Fix to deprecation warnings about sha and md5 modules.
+Uses hashlib if available, otherwise original module.
+
 
 New in v0.5.05 (2008/12/30)
 ---------------------------
